# Retention

./: .env.example  .gitignore  LANDING_PAGE_DEPLOY.md  LICENSE  PRODUCTION_BUILD.md  README.md  UPDATE_SYSTEM_GUIDE.md  build-sidecar.bat  build-sidecar.py  deploy-landing-page.bat  deploy-landing-page.sh  git  index.html  package.json  pnpm-lock.yaml  requirements.txt  setup.bat  start.ps1  tailwind.config.js  test.sh  tsconfig.json  tsconfig.node.json
.claude/: settings.local.json
.github/: RELEASE_CHECKLIST.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  README.md  main.py
landing-page/: README.md  index.html
python_sidecar/: README.md  __init__.py  __main__.py  app.py  cli.py  db.py  migrations.py  models.py  pyproject.toml  scoring.py
python_sidecar/tests/: test_scoring.py  test_security.py
scripts/: apply_phase2_db_updates.py  build_and_test.py  build_sidecar.py  bump-version.py  download_model_for_bundle.py  run-sidecar-build.cjs  test_bundled_sidecar.py
src/: App.tsx  index.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AlternativeAnswersInfo.tsx  ConfirmModal.tsx  DeckDetails.tsx  DeckEditor.tsx  DeckHomeScreen.tsx  DeckList.tsx  DeleteConfirmModal.tsx  ErrorBoundary.tsx  StudyPanel.tsx  Toast.tsx  UpdateNotification.tsx
src/components/icons/: AppleIcon.tsx  BooksIcon.tsx  CalendarIcon.tsx  ChartIcon.tsx  ClipboardIcon.tsx  LinuxIcon.tsx  (+16 more)
src/config/: api.ts
src/constants/: time.ts
src/hooks/: useAutoResizeTextarea.ts  useDarkMode.ts  usePlainTextPaste.ts
src/services/: api.ts  attempts.ts
src/store/: backendStore.ts  deckStore.ts  sessionQueue.ts  sidecarStore.ts  studyStore.test.ts  studyStore.ts
src/types/: deck.ts  study.ts
src/utils/: deckImportExport.ts  markdown.ts  time.ts
