[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retention-sidecar"
version = "0.1.0"
description = "Local FastAPI sidecar powering Retention scoring"
readme = "README.md"
authors = [{ name = "Retention Team" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<0.112",
  "uvicorn[standard]>=0.29,<0.30",
  "pydantic>=2.6,<3.0",
  "sentence-transformers>=2.7,<3.0",
  "numpy>=1.26,<2.0",
  "scipy>=1.11,<2.0",
  "sqlmodel>=0.0.16,<0.0.17",
  "aiosqlite>=0.20,<0.21"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8.0",
  "httpx>=0.27,<0.28",
  "pyinstaller>=6.3,<6.7"
]

[project.scripts]
retention-init-db = "python_sidecar.cli:init_db"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_sidecar"]


