[package]
name = "flash-ai"
version = "0.1.0"
edition = "2021"
description = "Flash-AI desktop shell"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["http-request", "shell-open", "custom-protocol"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
