[package]
name = "retention"
version = "0.1.0"
edition = "2021"
description = "AI-powered flashcard app - Learn it. Keep it. Make it stick."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
